# better-transcripts

./: .gitignore  CLAUDE.md  admin_routes.py  auth.py  auth_routes.py  auth_utils.py  job_routes.py  main.py  models.py  page_routes.py  pyproject.toml  readme.md
docs/: uv.md
docs/fastapi-users/: README.md  __init__.py  app.py  db.py  requirements.txt
prompts/: chapters.md  chapters_context.md  edit_transcript.md  multi_speaker.md  single_speaker.md
static/js/: tailwind-config.js
templates/: admin_page.html  base.html  index.html  job_detail_page.html  job_list_page.html  login.html  register.html  unauthorized.html
templates/partials/: admin_dashboard.html  admin_user_jobs.html  job_detail.html  job_list.html  job_list_item.html  job_list_view.html
